#RDA-967 Fix problems on IE and Edge

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,6 +18,7 @@
 
 html, body {
   scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 ::-webkit-scrollbar {
   width: 0px;
